# solar-panel-sim

./: Makefile  README.md  pyproject.toml  requirements.txt  tasks.ps1  tasks.py
app/: streamlit_app.py
locales/: en.json  hr.json
src/panelsim/: __init__.py  i18n.py  math_explain.py  models.py  simulate.py  units.py
src/panelsim/physics/: __init__.py  energy_balance.py  thermal_models.py
src/panelsim/viz/: __init__.py  charts.py  heatflow_component.py
tests/: test_app_smoke.py  test_energy_balance.py  test_thermal_models.py
