[project]
name = "panelsim"
version = "0.1.0"
description = "Educational thermal simulator for a single solar panel (EN/HR), with energy balance, worked-out math, and a heat-flow animation."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "Marko Hajba", email = "hajba.marko@gmail.com" }]
dependencies = [
    "pvlib>=0.11",
    "numpy>=1.26",
    "scipy>=1.13",
    "pandas>=2.2",
    "pint>=0.24",
    "pydantic>=2.7",
    "streamlit>=1.36",
    "plotly>=5.22",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "ruff>=0.5",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/panelsim"]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests", "app"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
# The heat-flow component embeds a vanilla-JS canvas scene as a raw string;
# wrapping those JS lines to 100 cols would hurt readability, not help it.
"src/panelsim/viz/heatflow_component.py" = ["E501"]
# The app inserts src/ on sys.path before importing panelsim (for deployment
# targets that don't pip-install the project), so its imports follow code.
"app/streamlit_app.py" = ["E402"]

[tool.mypy]
python_version = "3.13"
packages = ["panelsim"]
mypy_path = "src"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
warn_unused_ignores = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
